--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.springframework.samples</groupId>
   <artifactId>GitHubAPI_TEST</artifactId>
-  <version>0.1.0</version>
+  <version>0.9.0_Beta</version>
   
   <parent>
      <groupId>org.springframework.boot</groupId>
